--- a/concourse/tasks/generate-hash.yaml
+++ b/concourse/tasks/generate-hash.yaml
@@ -4,7 +4,7 @@ platform: linux
 image_resource:
   type: registry-image
   source:
-    repository: bash
+    repository: busybox
 
 outputs:
 - name: generate-hash
@@ -12,5 +12,5 @@ outputs:
 run:
   path: sh
   args:
-  - -c
+  - -exc
   - "gsutil cp ((gcsimgfile)) img.tar.gz; if [ $? != 0 ]; then exit 1; fi; echo $(sha256sum img.tar.gz) | tee generate-hash/hash"
