--- a/concourse/tasks/generate-hash.yaml
+++ b/concourse/tasks/generate-hash.yaml
@@ -14,4 +14,4 @@ run:
   path: sh
   args:
   - -exc
-  - "gcloud storage cp ((gcsimgfile)) img.tar.gz; if [ $? != 0 ]; then exit 1; fi; echo $(sha256sum img.tar.gz) | tee generate-hash/hash"
+  - "gcloud storage cp ((gcsimgfile)) ((filename)).tar.gz; if [ $? != 0 ]; then exit 1; fi; echo $(sha256sum img.tar.gz) | tee generate-hash/hash"
