--- a/concourse/pipelines/pipeline-set-pipeline.yaml
+++ b/concourse/pipelines/pipeline-set-pipeline.yaml
@@ -38,6 +38,8 @@ jobs:
     file: guest-test-infra/concourse/tasks/render-templates.yaml
     vars:
       config_dir: concourse/pipelines
+  - set_pipeline: accelerator-image-build
+    file: rendered/accelerator-image-build.json
   - set_pipeline: linux-image-build
     file: rendered/linux-image-build.json
   - set_pipeline: linux-image-build-dev
