--- a/container_images/gobuild/Dockerfile
+++ b/container_images/gobuild/Dockerfile
@@ -11,7 +11,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-FROM golang:bullseye
+FROM golang:bookworm
 
 RUN apt-get update && apt-get install -y git protobuf-compiler protoc-gen-go && \
     rm -rf /var/cache/apt/archives
